<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_introduction"
            android:icon="@drawable/ic_introduction"
            android:title="@string/main_introduction"/>
        <item
            android:id="@+id/main_programs"
            android:icon="@drawable/ic_programs"
            android:title="@string/main_programs"/>
        <item
            android:id="@+id/main_leprosy_effects"
            android:icon="@drawable/ic_leprosy"
            android:title="@string/main_leprosy_effects"/>
        <item
            android:id="@+id/main_news"
            android:icon="@drawable/ic_news"
            android:title="@string/main_news"/>
        <item
            android:id="@+id/main_photo_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/main_photo_gallery"/>
        <item
            android:id="@+id/main_staff_information"
            android:icon="@drawable/ic_staff"
            android:title="@string/main_staff_information"/>
        <item
            android:id="@+id/main_publications"
            android:icon="@drawable/ic_publication"
            android:title="@string/main_publications"/>
        <item
            android:id="@+id/main_contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/main_contact_us"/>
        <item
            android:id="@+id/main_director_message"
            android:icon="@drawable/ic_director"
            android:title="@string/main_director_message"/>
    </group>

</menu>
