<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="30dp"-->
                <!--android:text="@string/nav_contact"-->
                <!--android:textSize="32sp"-->
                <!--android:textStyle="bold"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/contact_details"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/btnTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:drawableEnd="@drawable/ic_phone"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableRight="@drawable/ic_phone"
                android:text="@string/contact_phone_telephone"
                android:textSize="16sp"/>


            <TextView
                android:id="@+id/btnFax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/contact_fax"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/btnContactEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:drawableEnd="@drawable/ic_email"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableRight="@drawable/ic_email"
                android:text="@string/contact_email"
                android:textSize="16sp"/>


        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main_main"
        app:menu="@menu/activity_main_drawer_main"/>

</android.support.v4.widget.DrawerLayout>